PRODEV-2685 Fixed glass effect on select tag on IOS

--- a/src/components/RideTo/AddonSelectionGroup/AddonItemSlider/AddonSizes/AddonSizes.scss
+++ b/src/components/RideTo/AddonSelectionGroup/AddonItemSlider/AddonSizes/AddonSizes.scss
@@ -6,6 +6,11 @@
   text-align-last: center;
   text-align: center;
   font-size: 16px !important;
+  -moz-appearance: none;
+  -webkit-appearance: none; 
+  appearance: none;
+  background: url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") white no-repeat calc(100% - 10px) !important;
+
 
   option:disabled {
     color: #ccc;
